# async-http-1c-nativ

./: README.md
1C/: ConfigDumpInfo.xml  Configuration.xml
1C/CommonModules/: НВК_НастройкиСетевогоДвижка.xml  НВК_Сериализация.xml  НВК_СетевойДвижок.xml  НВК_СетевойДвижокПовтИсп.xml
1C/CommonModules/НВК_НастройкиСетевогоДвижка/Ext/: Module.bsl
1C/CommonModules/НВК_Сериализация/Ext/: Module.bsl
1C/CommonModules/НВК_СетевойДвижок/Ext/: Module.bsl
1C/CommonModules/НВК_СетевойДвижокПовтИсп/Ext/: Module.bsl
1C/CommonTemplates/: НВК_ВК.xml
1C/DataProcessors/: НВК_Тестирование.xml
1C/DataProcessors/НВК_Тестирование/Forms/: Форма.xml
1C/DataProcessors/НВК_Тестирование/Forms/Форма/Ext/: Form.xml
1C/DataProcessors/НВК_Тестирование/Forms/Форма/Ext/Form/: Module.bsl
1C/InformationRegisters/: НВК_НастройкиСетевогоДвижка.xml
1C/Languages/: Русский.xml
1C/Roles/: НВК_ОсновнаяРоль.xml
1C/Subsystems/: НВК_ВК.xml
rust/: Cargo.toml  Manifest.xml
rust/src/: cache.rs  http_engine.rs  https.rs  lib.rs  parser.rs  utils.rs
rust/test/: integration_test.rs
