[package]
name = "network_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "network_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
native_api_1c = "0.10.5"
utf16_lit = "2.0.2"
uuid = { version = "1.0", features = ["v4", "serde"] } 
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-retry2 = { version = "0.6", features = ["jitter"] }
reqwest = { version = "0.12", features = ["json", "native-tls", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
crossbeam-channel = "0.5"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
insta = { version = "1.31.0", features = ["redactions"] }

[[test]]
name = "integration_test"
path = "test/integration_test.rs"